SDKs/twilio.com/twilio_notify_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateBindingRequest req = new CreateBindingRequest() {{
                security = new CreateBindingSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new CreateBindingPathParams() {{
                    serviceSid = "sit";
                }};
                request = new CreateBindingCreateBindingRequest() {{
                    address = "voluptas";
                    bindingType = "gcm";
                    credentialSid = "expedita";
                    endpoint = "consequuntur";
                    identity = "dolor";
                    notificationProtocolVersion = "expedita";
                    tag = new String[]() {{
                        add("fugit"),
                        add("et"),
                        add("nihil"),
                    }};
                }};
            }};

            CreateBindingResponse res = sdk.createBinding(req);

            if (res.notifyV1ServiceBinding.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createBinding`
* `createCredential`
* `createNotification`
* `createService`
* `deleteBinding`
* `deleteCredential`
* `deleteService`
* `fetchBinding`
* `fetchCredential`
* `fetchService`
* `listBinding`
* `listCredential`
* `listService`
* `updateCredential`
* `updateService`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
